# helpdesk

./: AGENTS.md  README.md  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.i18n_backups/run-20251117-100321/helpdesk/: hooks.py
desk/: package.json
desk/src/: dayjs.ts  main.js  utils.ts
desk/src/components/: Apps.vue  AssignmentModal.vue  Autocomplete.vue  CallArea.vue  CannedResponseSelectorModal.vue  CommentBox.vue  CommentTextEditor.vue  CommunicationArea.vue  CommunicationArea.vue.38cab1df.bak  ConfirmDialog.vue  DiscardButton.vue  EmailArea.vue  EmailArea.vue.d3471fa4.bak  EmailContent.vue  EmailEditor.vue  EmptyState.vue  HistoryBox.vue  IconPicker.vue  ListViewBuilder.vue  SearchArticles.vue  SearchComplete.vue  SearchMultiSelect.vue  TextEditor.vue  TicketField.vue  UniInput.vue  ViewBreadcrumbs.vue  ViewModal.vue
desk/src/composables/: fc.ts  realtime.ts  useView.ts
helpdesk/: cleanup_activities.py  cleanup_all.py  cleanup_all_again.py  cleanup_comms.py  cleanup_demo.py  cleanup_users.py  create_agents.py  debug.py  debug.py.a1fbcc0b.bak  debug.py.dd639cae.bak  force_cleanup_users.py  hooks.py  search.py  search_sqlite.py  test_delete_fix.py  test_utils.py  update_ai_insights.py  utils.py
helpdesk/api/: dashboard.py  doc.py
helpdesk/extends/: communication.py
helpdesk/locale/: tr.po
helpdesk/patches/: template_remove_default_fields.py
helpdesk/setup/: install.py  ticket_feedback.py  welcome_ticket.py
helpdesk/templates/: kb_base_template.html
helpdesk/translations/: tr.csv
(+264 files in other folders)
