[project]
name = "helpdesk"
authors = [
    { name = "BRV Software", email = "support@brvsoftware.com.tr"}
]
description = "Open Source Customer Service Software"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Core dependencies
    "textblob==0.18.0.post0",
    "freezegun==1.5.5",
]
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.40.4,<16.0.0"
